--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                         <img src="kode.jpg" alt="QRIS Code" />
                     </div>
                 </div>
-                <p>Scan QR code di atas untuk melakukan pembayaran</p>
+                <p>Unduh dan Scan QR code di atas untuk melakukan pembayaran lalu Konfirmasi ke Admin</p>
                 <button class="confirm-btn" id="confirmBtn">Konfirmasi via WhatsApp</button>
             </div>
         </section>
