--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beacon ID - Premium Black & White Shirt</title>
+    <title>Beacon ID | Classy Person T-shirt</title>
     <style>
         :root {
             --primary: #000000;
